# Melvin

./: CMakeLists.txt  DIAGNOSTIC_SUMMARY.md  HARDWARE_AND_DEDUPLICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MACOS_ENHANCEMENT_COMPLETE.md  MACOS_INTAKE_DIAGNOSTIC.md  MULTIMODAL_INTAKE.md  OPTIMIZATION_AND_HARDWARE.md  OPTIMIZATION_COMPLETE.md  PARALLEL_ARCHITECTURE.md  PERFORMANCE_ANALYSIS.md  README.md  STATISTICS_TRACKING.md  STORAGE_ARCHITECTURE.md  create_synthetic_data.py  fetch_data.py  fetch_huggingface.py  run_melvin.sh  test_bin  test_binary_persistence.cpp  verify_architecture.md
data/: literature.txt  melvin_documentation.txt  simple_test.txt  technical_docs.txt  test_input.txt  wikipedia_concepts.txt
include/melvin/: config.h  types.h
scripts/: fetch_huggingface_data.py  simple_fetch.py
src/: main.cpp
src/connections/: ExactConnector.cpp  ExactConnector.h  Weight.cpp  Weight.h
src/core/: AtomicGraph.cpp  AtomicGraph.h  BinaryPersistence.cpp  BinaryPersistence.h  Edge.h  GraphStatistics.cpp  GraphStatistics.h  Node.cpp  Node.h  NodeAllocator.cpp  NodeAllocator.h  TaskQueue.cpp  TaskQueue.h
src/diagnostic/: DebugTracer.cpp  DebugTracer.h
src/evolution/: EvolutionEngine.cpp  EvolutionEngine.h  FitnessEvaluator.cpp  FitnessEvaluator.h  ParameterMutator.cpp  ParameterMutator.h
src/feedback/: FeedbackRouter.cpp  FeedbackRouter.h
src/generalization/: LeapConnections.cpp  LeapConnections.h  LeapNodes.cpp  LeapNodes.h
src/intake/: AVFoundationCapture.h  AVFoundationCapture.mm  AdaptiveFilter.cpp  AdaptiveFilter.h  AudioIntake.cpp  AudioIntake.h  DatasetLoader.cpp  DatasetLoader.h  HardwareCapture.h  HardwareCapture.mm  IntakeManager.cpp  IntakeManager.h  MotorIntake.cpp  MotorIntake.h  MultimodalIntake.cpp  MultimodalIntake.h  RealHardwareCapture.h  RealHardwareCapture.mm  TextIntake.cpp  TextIntake.h  VisionIntake.cpp  VisionIntake.h
src/motor/: CANInterface.cpp  CANInterface.h  MotorController.cpp  MotorController.h  MotorNode.cpp  MotorNode.h
src/output/: AudioOutput.cpp  AudioOutput.h  DisplayManager.cpp  DisplayManager.h  MotorOutput.cpp  MotorOutput.h  OutputManager.cpp  OutputManager.h  TextOutput.cpp  TextOutput.h  VisualAttention.cpp  VisualAttention.h  Visualizer.cpp  Visualizer.h
src/pruning/: PruningEngine.cpp  PruningEngine.h
src/reasoning/: ActivationField.cpp  ActivationField.h  CoherenceCalculator.cpp  CoherenceCalculator.h  StabilityDetector.cpp  StabilityDetector.h  TraversalEngine.cpp  TraversalEngine.h
